[DE PE SSE mobile] Correct overflowed title in toolbar

--- a/apps/common/mobile/resources/less/common.less
+++ b/apps/common/mobile/resources/less/common.less
@@ -25,12 +25,12 @@
     }
 }
 
-.navbar {
-    .title {
-        text-overflow: initial;
-        white-space: normal;
-    }
-}
+//.navbar {
+//    .title {
+//        text-overflow: initial;
+//        white-space: normal;
+//    }
+//}
 
 .navbar-hidden {
     transform: translate3d(0, calc(-1 * (var(--f7-navbar-height) + var(--f7-subnavbar-height))), 0);
@@ -48,9 +48,12 @@
     .subnavbar-inner {
         padding: 0;
         .title {
-            white-space: nowrap;
+            //white-space: nowrap;
             overflow: hidden;
-            text-overflow: ellipsis;
+            text-overflow: initial;
+            margin: 0;
+            padding: 0;
+            flex-shrink: initial;
         }
     }
     .icon-back {
